[package]
name = "mcsv-handler-discord"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
toml = "0.8.2"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.31"
public-ip = "0.2.2"
