[package]
name = "mcsv-handler-discord"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_derive = "1.0.196"
toml = "0.8.9"
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.33"
public-ip = "0.2.2"
zip = "0.6.6"
walkdir = "2.4.0"
