[package]
name = "hone"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
toml = "0.8.20"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.40"
public-ip = "0.2.2"
zip = "2.2.3"
zip-extensions = "0.8.1"
